# elfio-rs

./: Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml  todo.md
examples/: tutorial.rs
src/: array.rs  dynamic.rs  elfio.rs  header.rs  lib.rs  macros.rs  main.rs  modinfo.rs  note.rs  relocation.rs  section.rs  segment.rs  strings.rs  symbols.rs  types.rs  utils.rs
tests/: test1.rs  test2.rs
tests/files/: hello_ppc64  i2c-gpio.ko
