[package]
name = "elfio"
version = "0.3.1"
authors = ["Serge Lamikhov-Center <to_serge@hotmail.com>"]
edition = "2018"

[lib]
name = "elfio"
path = "src/elfio.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.5"
num-traits = "0.2"
